--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-responsive": "*",
+    "sass": "^1.39.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
