--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-responsive": "*",
-    "sass": "^1.39.0"
+    "sass": "^1.39.0",
+    "swiper": "^7.0.6"
   },
   "devDependencies": {
     "eslint": "7.32.0",
