--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "11.1.2",
+    "nodemailer": "^6.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-responsive": "*",
